--- a/20200716-JacobHaff-NYCSchools/View/Base.lproj/Main.storyboard
+++ b/20200716-JacobHaff-NYCSchools/View/Base.lproj/Main.storyboard
@@ -90,8 +90,8 @@
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="9BH-pf-PsB">
                                                     <rect key="frame" x="20" y="20" width="334" height="42"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="SAT Scores" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uhb-5C-txc" userLabel="SAT Scores Label">
-                                                            <rect key="frame" x="0.0" y="0.0" width="334" height="0.0"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SAT Scores" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uhb-5C-txc" userLabel="SAT Scores Label">
+                                                            <rect key="frame" x="0.0" y="0.0" width="334" height="10"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="25" id="fGW-Ou-UlG"/>
                                                             </constraints>
@@ -99,8 +99,8 @@
                                                             <color key="textColor" red="0.1686073542" green="0.1764897406" blue="0.3607360423" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Average schoolwide SAT scores by category:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2eD-zc-92p">
-                                                            <rect key="frame" x="0.0" y="8" width="334" height="10"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Average schoolwide SAT scores by category:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2eD-zc-92p">
+                                                            <rect key="frame" x="0.0" y="18" width="334" height="0.0"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="16" id="pBb-Mt-T8y"/>
                                                             </constraints>
@@ -108,7 +108,7 @@
                                                             <color key="textColor" red="0.2549039125" green="0.25489839910000001" blue="0.25490215420000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oi3-NV-vtN">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="748" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oi3-NV-vtN">
                                                             <rect key="frame" x="0.0" y="26" width="334" height="0.0"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="16" id="YHa-CE-hJt"/>
@@ -117,7 +117,7 @@
                                                             <color key="textColor" red="0.2549039125" green="0.25489839910000001" blue="0.25490215420000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="azL-57-xuC">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="748" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="azL-57-xuC">
                                                             <rect key="frame" x="0.0" y="34" width="334" height="0.0"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="16" id="qJ0-67-VWC"/>
@@ -126,7 +126,7 @@
                                                             <color key="textColor" red="0.2549039125" green="0.25489839910000001" blue="0.25490215420000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ri-4K-Epr">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="748" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ri-4K-Epr">
                                                             <rect key="frame" x="0.0" y="42" width="334" height="0.0"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="16" id="62P-jf-rU1"/>
@@ -219,14 +219,17 @@
                                                             <color key="textColor" red="0.21960784310000001" green="0.21960784310000001" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="555-555-555" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zD7-Yj-OSg">
-                                                            <rect key="frame" x="0.0" y="54" width="334" height="17"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="555-555-555" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zD7-Yj-OSg">
+                                                            <rect key="frame" x="0.0" y="54" width="334" height="14"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <color key="textColor" red="0.21960784310000001" green="0.21960784310000001" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" ambiguous="YES" text="www.awesome.com" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hep-0X-JhN">
-                                                            <rect key="frame" x="0.0" y="77" width="334" height="9"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="www.awesome.com" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hep-0X-JhN">
+                                                            <rect key="frame" x="0.0" y="74" width="334" height="12"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="12" id="OHh-lC-Z8R"/>
+                                                            </constraints>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <color key="textColor" red="0.21960784310000001" green="0.21960784310000001" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -236,7 +239,6 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="Q0c-bX-O9x" firstAttribute="top" secondItem="QQE-0G-E3B" secondAttribute="top" constant="20" id="DY4-ox-ViE"/>
-                                                <constraint firstAttribute="trailing" secondItem="Q0c-bX-O9x" secondAttribute="trailing" id="Ivo-Km-nfW"/>
                                                 <constraint firstAttribute="trailing" secondItem="Q0c-bX-O9x" secondAttribute="trailing" constant="20" id="Orm-6b-VDB"/>
                                                 <constraint firstAttribute="bottom" secondItem="Q0c-bX-O9x" secondAttribute="bottom" constant="20" id="fm5-f7-BeV"/>
                                                 <constraint firstItem="Q0c-bX-O9x" firstAttribute="leading" secondItem="QQE-0G-E3B" secondAttribute="leading" constant="20" id="yM8-cc-SDM"/>
@@ -278,7 +280,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="Q5e-VF-1Ar"/>
                     </view>
-                    <navigationItem key="navigationItem" id="J8e-7r-Xzv">
+                    <navigationItem key="navigationItem" title="School Details" id="J8e-7r-Xzv">
                         <barButtonItem key="backBarButtonItem" title="Back" id="go6-5L-57s"/>
                     </navigationItem>
                     <connections>
